# site_forecast

./: .gitignore  CLAUDE.md  DESIGN.md  README.rst  pyproject.toml  test_plan.md
.github/workflows/: test.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  site_forecast.rst
src/site_forecast/: __init__.py  forecast.py  plotting.py  predict_phase.py  sensitivity.py
src/site_forecast/plotting/: plot_mpl.py  plot_plotly.py
src/site_forecast/query/: __init__.py  herbie_maps.py  monitor.py  ndfd.py  nomads_cutout.py  open_meteo.py
src/site_forecast/train/: __init__.py  readdata.py
tests/: conftest.py
tests/fixtures/cassettes/: open_meteo_ensemble.yaml  open_meteo_multi_site.yaml  open_meteo_pressure.yaml  open_meteo_vla.yaml
tests/fixtures/dataframes/: herbie_tcolw_tiny.nc  ndfd.parquet
tests/fixtures/sensitivity/: om_pressure.parquet  om_surface.parquet
tests/query/: test_herbie_maps.py  test_monitor.py  test_ndfd.py  test_open_meteo.py
tests/schema_live/: conftest.py  test_live_herbie_maps.py  test_live_monitor.py  test_live_ndfd.py  test_live_open_meteo.py
tests/schemas/: queries.py
tests/scripts/: refresh_fixtures.py  refresh_herbie_fixture.py  refresh_monitor_fixtures.py  refresh_ndfd_fixture.py  refresh_sensitivity_fixtures.py
tests/scripts/refresh/: __init__.py  herbie.py  monitor.py  ndfd.py  open_meteo.py  (+1 more)
tests/unit/: test_open_meteo_session.py  test_plot_helpers.py  test_query_helpers.py  test_readdata.py  test_sensitivity.py  test_sensitivity_pure.py  test_station.py
